samples/_failures_safe/1761355445_7c51f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c5b8d53b.c: In function ‘main’:
./samples/SAFE/__tmp_c5b8d53b.c:151:5: error: expected expression at end of input
  151 |     initialize_graph(&g,
      |     ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c5b8d53b.c:151:5: error: expected declaration or statement at end of input
